--- a/services/wordpress/docker-compose.yml
+++ b/services/wordpress/docker-compose.yml
@@ -1,6 +1,29 @@
 version: "3"
 
-  
+services:
+  wordpress:
+    image: wordpress:latest
+    container_name: wordpress
+    restart: unless-stopped
+    env_file:
+      - .env
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.wordpress.rule=Host(`${HOST_NAME}`)"
+      - "traefik.http.routers.wordpress.entrypoints=web,websecure"
+      - "traefik.http.routers.wordpress.tls.certresolver=letsencrypt"
+      - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+    environment:
+      WORDPRESS_DB_HOST: ${MYSQL_HOST:-mysql}
+      WORDPRESS_DB_USER: ${MYSQL_USER:-dbuser}
+      WORDPRESS_DB_PASSWORD: ${MYSQL_USER:-dbpassword}
+      WORDPRESS_DB_NAME: ${MYSQL_DATABASE:-testdb}
+    # ports:
+    #   - "8080:80"
+    volumes:
+      - ./wordpress:/var/www/html
+    networks:
+      - web
 
 networks:
   web:
