--- a/services/postgresql/docker-compose.yml
+++ b/services/postgresql/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "traefik.tcp.routers.postgres.entrypoints=postgres"
       - "traefik.tcp.routers.postgres.service=postgres"
       - "traefik.tcp.routers.postgres.tls=true"
+      - "traefik.tcp.routers.postgres.tls.certresolver=letsencrypt"
+      - "traefik.tcp.routers.postgres.tls.passthrough=true"
       - "traefik.tcp.services.postgres.loadbalancer.server.port=5432"
     networks:
       - web
