--- a/services/pgadmin/docker-compose.yml
+++ b/services/pgadmin/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "traefik.http.routers.pgadmin.rule=Host(`${HOST_NAME}`)"
       - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
       - "traefik.http.routers.pgadmin.entrypoints=web,websecure"
+      - "traefik.http.routers.pgadmin.service=pgadmin"
+      - "traefik.http.routers.pgadmin.middlewares=redirect-to-https"
       - "traefik.http.routers.pgadmin.tls.certresolver=letsencrypt"
     volumes:
       - ./pgadmin:/var/lib/pgadmin
