--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
       - "443:443" # https
       # - "8080:8080" # for traefik dashboard
       # - "3306:3306" # mysql
-      # - "5432:5432" # postgres
+      - "5432:5432" # postgres
       # DMS ports you want to proxy:
       # - "25:25"
       # - "587:587"
